# C3_Basic_Computer

./: .gitignore  CMakeLists.txt  README.md  SESSION_STATUS.md  partitions.csv  sdkconfig.defaults
.codex/: PROJECT_SKILL.md
Old_version/: C3_BASIC_COMPUTER_Design_Freeze_v1.md  DesignStrategy.md  PHASE1.md  README.md  SESSION_STATUS.md  TASK_LIST.md  sdkconfig.defaults
docs/: 01_Design_Principles.md  02_Software_Architecture.md  03_User_Experience_Guide.md  04_Shell_Reference.md  05_File_System.md  06_BASIC_Language.md  07_BASIC_Library.md  08_Workspace.md  09_Native_RISC-V_Assembly.md  10_System_Commands.md  12_Input_and_Drivers.md  COMPLIANCE_MATRIX.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  MANIFESTO.md  PHASE1_FIX_LIST.md  SPRINT1_DETAILED_DESIGN_RECOVERY_FIRST.md  SPRINT1_TICKET_LIST.md  SPRINT_001_PHASE2A_ASM_CAPTURE.md  SPRINT_002_BLE_HID_KEYBOARD_BOUNDARY.md  SPRINT_002_TASK_LIST.md  SPRINT_002_WORKSPACE_SHELL_AND_INPUT_PLAN.md  SPRINT_003_BASIC_HARDWARE_API.md  SPRINT_004_NANO_EDITOR_SERVICE.md  SPRINT_005_BIN_SERVICE_ABI_AND_PIPES.md  SPRINT_006_BASIC_NANO_RUN_DEBUG.md  SPRINT_007_SHELL_YMODEM_TRANSFER.md  SPRINT_008_C3COM_RUNNER.md  SPRINT_009_ASM_NANO_MODE_TASK_LIST.md  SPRINT_010_TERMINAL_SERVICE_AND_BASIC_TERM.md  SPRINT_011_UNTITLED_NANO_BASIC_TASK_LIST.md
main/: CMakeLists.txt  basic.c  basic.h  basic_hardware.c  basic_hardware.h  input.h  input_ble_hid.c  input_serial.c  main.c  storage.c
source/shell/main/: CMakeLists.txt  app_main.c  input_serial.c  storage_fatfs.c
tools/: adversarial_shell_smoke.py  basic_editor_smoke.py  (+13 more)
(+56 files in other folders)
